--- a/templates/Kadai1/L100/Login.html
+++ b/templates/Kadai1/L100/Login.html
@@ -1,25 +1,23 @@
+<!-- templates/login.html -->
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>ログイン画面</title>
+    <title>ログイン</title>
 </head>
 <body>
 <h2>ログイン</h2>
-<form method="post">
+{% if messages %}
+    {% for message in messages %}
+        <div>{{ message }}</div>
+    {% endfor %}
+{% endif %}
+<form method="POST">
     {% csrf_token %}
-    <label for="username">ユーザー名:</label>
-    <input type="text" id="username" name="username" required><br><br>
+    <label for="empid">ユーザID:</label>
+    <input type="text" name="empid" id="empid" required><br>
     <label for="password">パスワード:</label>
-    <input type="password" id="password" name="password" required><br><br>
+    <input type="password" name="password" id="password" required><br>
     <button type="submit">ログイン</button>
 </form>
-{% if messages %}
-    <ul>
-        {% for message in messages %}
-            <li>{{ message }}</li>
-        {% endfor %}
-    </ul>
-{% endif %}
 </body>
 </html>
