--- a/templates/Kadai1/L100/Admin.html
+++ b/templates/Kadai1/L100/Admin.html
@@ -53,9 +53,9 @@
     </header>
     <nav>
         <ul>
-            <li><a href={>従業員登録</a></li>
-            <li><a href="#hospital-list">病院一覧</a></li>
-            <li><a href="#add-hospital">病院の追加</a></li>
+            <li><a href="{% url  'register_employee' %}">従業員登録</a></li>
+            <li><a href="#hospital-list">他病院一覧</a></li>
+            <li><a href="#add-hospital">他病院の追加</a></li>
             <li><a href="#change-password">パスワードの変更</a></li>
         </ul>
     </nav>
