--- a/templates/Kadai1/H100/tabyouin_success.html
+++ b/templates/Kadai1/H100/tabyouin_success.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1>登録が成功しました。</h1>
-<a href="{% url 'tabyouin_register' %}">戻る</a>
+<a href="{% url 'admin_dashboard' %}">戻る</a>
 </body>
 </html>
