--- a/templates/Kadai1/E100/UpdateEmployee.html
+++ b/templates/Kadai1/E100/UpdateEmployee.html
@@ -6,20 +6,14 @@
 </head>
 <body>
 <h1>従業員情報更新</h1>
-{% if messages %}
-    <ul>
-        {% for message in messages %}
-            <li>{{ message }}</li>
-        {% endfor %}
-    </ul>
-{% endif %}
-<form method="post" >
-    {% csrf_token %}
-    <p>
-        <label for="emppasswd">新しいパスワード:</label>
-        <input type="password" id="emppasswd" name="emppasswd" maxlength="256" required>
-    </p>
-    <button type="submit">更新</button>
+<form method="GET" action="{% url 'employee_list' %}">
+    <input type="text" name="q" value="{{ query|default:' ' }}" placeholder="ユーザIDで検索">
+    <button type="submit">検索</button>
 </form>
+<table border="1">
+    <tr>
+        <th>名前</th>
+    </tr>
+</table>
 </body>
 </html>
