--- a/templates/Kadai1/E100/UpdateEmployee.html
+++ b/templates/Kadai1/E100/UpdateEmployee.html
@@ -1,19 +1,34 @@
 <!-- templates/update_employee.html -->
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
-    <title>従業員情報更新</title>
+    <title>従業員一覧</title>
 </head>
 <body>
-<h1>従業員情報更新</h1>
-<form method="GET" action="{% url 'employee_list' %}">
-    <input type="text" name="q" value="{{ query|default:' ' }}" placeholder="ユーザIDで検索">
+<h1>従業員一覧</h1>
+
+<form method="GET" action="{% url 'employee_kensaku' %}">
+    <input type="text" name="query" placeholder="従業員IDで検索">
     <button type="submit">検索</button>
 </form>
+
 <table border="1">
     <tr>
+        <th>従業員ID</th>
         <th>名前</th>
+        <th></th>
     </tr>
+    {% for employee in employees %}
+        <tr>
+            <td>{{ employee.empid }}</td>
+            <td>{{ employee.emplname }}{{ employee.empfname }}</td>
+            <td>
+                <form method="GET" action="{% url 'update_employee' employee.empid %}">
+                    <button type="submit">変更</button>
+                </form>
+            </td>
+        </tr>
+    {% endfor %}
 </table>
 </body>
 </html>
