--- a/templates/Kadai1/E100/RegisterEmployee.html
+++ b/templates/Kadai1/E100/RegisterEmployee.html
@@ -33,7 +33,7 @@
     </p>
     <p>
         <label for="emprole">役職:</label>
-        <input type="number" id="emprole" name="emprole" required>
+        <input type="number" id="emprole" name="emprole" placeholder="管理者:0 従業員:1 医師:2" required>
     </p>
     <button type="submit">登録</button>
 </form>
