--- a/templates/Kadai1/E100/successupdate.html
+++ b/templates/Kadai1/E100/successupdate.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>パスワード変更成功</title>
 </head>
 <body>
-
+<h1>パスワードの変更に成功しました</h1>
 </body>
 </html>
