--- a/templates/Kadai1/L100/Admin.html
+++ b/templates/Kadai1/L100/Admin.html
@@ -55,9 +55,8 @@
         <ul>
             <li><a href="{% url  'register_employee' %}">従業員登録</a></li>
             <li><a href="{% url 'employee_list' %}">従業員一覧</a></li>
-            <li><a href="#hospital-list">他病院一覧</a></li>
-            <li><a href="#add-hospital">他病院の追加</a></li>
-            <li><a href="#change-password">パスワードの変更</a></li>
+            <li><a href="{% url 'tabyouin_list' %}">他病院一覧</a></li>
+            <li><a href="{% url 'tabyouin_register' %}">他病院の追加</a></li>
         </ul>
     </nav>
 </div>
