--- a/templates/Kadai1/L100/Reception.html
+++ b/templates/Kadai1/L100/Reception.html
@@ -54,7 +54,7 @@
     <nav>
         <ul>
             <li><a href="{% url  'update_employee' empid %}">従業員パスワード変更</a></li>
-            <li><a href="#hospital-list">患者登録</a></li>
+            <li><a href="{% url 'patient_register' %}">患者登録</a></li>
             <li><a href="#add-hospital">患者管理</a></li>
             <li><a href="#change-password">患者検索</a></li>
         </ul>
