受付Ⅴ二つ目完成

--- a/templates/Kadai1/L100/Reception.html
+++ b/templates/Kadai1/L100/Reception.html
@@ -55,8 +55,7 @@
         <ul>
             <li><a href="{% url  'update_employee' empid %}">従業員パスワード変更</a></li>
             <li><a href="{% url 'patient_register' %}">患者登録</a></li>
-            <li><a href="#add-hospital">患者管理</a></li>
-            <li><a href="#change-password">患者検索</a></li>
+            <li><a href="{% url 'patient_kensaku' %}">患者一覧・管理</a></li>
         </ul>
     </nav>
 </div>
