--- a/templates/Kadai1/P100/patient_register.html
+++ b/templates/Kadai1/P100/patient_register.html
@@ -2,10 +2,10 @@
 <html lang="ja">
 <!DOCTYPE html>
 <head>
-    <title>従業員登録</title>
+    <title>患者登録</title>
 </head>
 <body>
-<h1>従業員登録</h1>
+<h1>患者登録</h1>
 {% if messages %}
     <ul>
         {% for message in messages %}
