--- a/templates/Kadai1/P100/patient_success.html
+++ b/templates/Kadai1/P100/patient_success.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>患者登録成功</title>
 </head>
 <body>
-
+<p>患者登録に成功しました</p>
 </body>
 </html>
