--- a/templates/Kadai1/P100/patient_register.html
+++ b/templates/Kadai1/P100/patient_register.html
@@ -28,12 +28,12 @@
         <input type="text" id="patfname" name="patfname" maxlength="64" required>
     </p>
     <p>
-        <label for="hokenmei">パスワード:</label>
+        <label for="hokenmei">保険証記号番号:</label>
         <input type="text" id="hokenmei" name="hokenmei" maxlength="64" required>
     </p>
     <p>
         <label for="hokenexp">有効期限:</label>
-        <input type="date" id="hokenexp" name="hokenexp" placeholder="管理者:0 従業員:1 医師:2" required>
+        <input type="date" id="hokenexp" name="hokenexp"  required>
     </p>
     <button type="submit">登録</button>
 </form>
