テスト始め

--- a/templates/Kadai1/L100/Doctor.html
+++ b/templates/Kadai1/L100/Doctor.html
@@ -54,9 +54,7 @@
     <nav>
         <ul>
             <li><a href="{% url  'doctor_kensaku' %}">患者検索・処置情報</a></li>
-            <li><a href="{% url 'employee_list' %}">従業員一覧</a></li>
-            <li><a href="{% url 'tabyouin_list' %}">他病院一覧</a></li>
-            <li><a href="{% url 'tabyouin_register' %}">他病院の追加</a></li>
+            <li><a href="{% url 'patient_search' %}">処置履歴確認</a></li>
         </ul>
     </nav>
 </div>
