--- a/templates/Kadai1/E100/UpdateEmployee.html
+++ b/templates/Kadai1/E100/UpdateEmployee.html
@@ -23,7 +23,7 @@
             <td>{{ employee.empid }}</td>
             <td>{{ employee.emplname }}{{ employee.empfname }}</td>
             <td>
-                <form method="GET" action="{% url 'update_employee_admin' employee.empid %}">
+                <form method="GET" action="{% url 'update_employee' employee.empid %}">
                     <button type="submit">パスワード変更</button>
                 </form>
             </td>
