テスト患者検索まで完了

--- a/templates/Kadai1/H100/tabyouin_register.html
+++ b/templates/Kadai1/H100/tabyouin_register.html
@@ -37,7 +37,7 @@
     </p>
     <p>
         <label for="kyukyu">救急対応:</label>
-        <input type="number" id="kyukyu" name="kyukyu" required>
+        <input type="number" id="kyukyu" name="kyukyu" placeholder="非救急:0 救急:1" required>
     </p>
     <button type="submit">登録</button>
 </form>
