--- a/templates/Kadai1/P100/patient_list.html
+++ b/templates/Kadai1/P100/patient_list.html
@@ -11,6 +11,12 @@
     <button type="submit">保険証の有効期限が切れている患者の検索</button>
 </form>
 
+{% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+    {% endfor %}
+{% endif %}
+
 <table border="1">
     <tr>
         <th>患者ID</th>
