--- a/templates/Kadai1/E100/RegisterEmployee.html
+++ b/templates/Kadai1/E100/RegisterEmployee.html
@@ -32,8 +32,12 @@
         <input type="password" id="emppasswd" name="emppasswd" maxlength="256" required>
     </p>
     <p>
+        <label for="confirmemppasswd">パスワード再入力:</label>
+        <input type="password" id="confirmemppasswd" name="confirmemppasswd" maxlength="256" required>
+    </p>
+    <p>
         <label for="emprole">役職:</label>
-        <input type="number" id="emprole" name="emprole" placeholder="管理者:0 従業員:1 医師:2" required>
+        <input type="number" id="emprole" name="emprole" placeholder="従業員:1 医師:2" required>
     </p>
     <button type="submit">登録</button>
 </form>
