--- a/templates/Kadai1/H100/tabyouin_list.html
+++ b/templates/Kadai1/H100/tabyouin_list.html
@@ -11,6 +11,11 @@
     <input type="text" name="q"  placeholder="住所で検索">
     <button type="submit">検索</button>
 </form>
+{% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+    {% endfor %}
+{% endif %}
 
 <table border="1">
     <tr>
