--- a/templates/Kadai1/P100/Docter_patient_list.html
+++ b/templates/Kadai1/P100/Docter_patient_list.html
@@ -10,6 +10,13 @@
     <input type="text" name="query" placeholder="名字で検索">
     <button type="submit">検索</button>
 </form>
+{% if messages %}
+    <ul>
+        {% for message in messages %}
+            <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
 
 <table border="1">
     <tr>
