--- a/templates/Kadai1/E100/passwordupdate.html
+++ b/templates/Kadai1/E100/passwordupdate.html
@@ -5,7 +5,13 @@
 </head>
 <body>
 <h1>パスワード変更</h1>
-
+{% if messages %}
+    <ul>
+        {% for message in messages %}
+            <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
 <form method="POST" action="{% url 'update_employee' employee.empid %}">
     {% csrf_token %}
     <p>従業員名: {{ employee.emplname }} {{ employee.empfname }}</p>
