テスト終わり

--- a/templates/Kadai1/D100/prescripsions.html
+++ b/templates/Kadai1/D100/prescripsions.html
@@ -7,6 +7,11 @@
 </head>
 <body>
 <h1>{{ patient.patlname }} {{ patient.patfname }}の処置履歴</h1>
+{% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+    {% endfor %}
+{% endif %}
 <table>
     <thead>
     <tr>
