これで本当にテスト終わり

--- a/templates/Kadai1/D100/medical.html
+++ b/templates/Kadai1/D100/medical.html
@@ -13,7 +13,7 @@
             <option value="{{ medicine.medicineid }}">{{ medicine.medicinename }}</option>
         {% endfor %}
     </select>
-    <br>
+    <br>kl;ajfl;kjsaoijrlkjasflkkj
 
     <label for="dosage">投与量:</label>
     <input type="text" name="dosage" id="dosage">
